--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 
 <html>
     <head>
-        <title>Project</title>
+        <title>Snake</title>
+        <link rel="icon" href="phone_icon.ico">
         <meta charset="UTF-8">
         <meta name="author" content="Dhia Ben Hammouda">
         <link rel="stylesheet" href="style.css">
@@ -39,7 +40,7 @@
                         <div class="d">
                             <div class="dd"></div>
                         </div>
-                        <div class="e">
+                        <div class="e" onClick="window.location.reload();">
                             <div class="ee"></div>
                         </div>
                     </div>
